# rayonette

./: API-REVIEW.md  Cargo.toml  DECISIONS.md  HANDOFF.md  HARDENING.md  PLAN.md  README.md  TASK-REGISTRATION-DESIGN.md  TASK-REGISTRATION-DEVIATIONS.md
.cargo/: audit.toml
.github/workflows/: ci.yml
examples/montecarlo/: Cargo.toml  README.md  build.rs
examples/montecarlo/cluster/: .gitignore  Dockerfile  compose.yml  down.sh  entrypoint.sh  up.sh
examples/montecarlo/src/: main.rs
examples/ssh-run/: Cargo.toml  build.rs
examples/ssh-run/src/: main.rs
examples/tui-replay/: Cargo.toml
examples/tui-replay/src/: main.rs
fixtures/consumer/: Cargo.toml  build.rs
fixtures/consumer/src/: main.rs
fixtures/consumer/tests/: e2e.rs
harness/docker/: .gitignore  Dockerfile.base  Dockerfile.rust  README.md  compose.yml  down.sh  entrypoint.sh  run-scenarios.sh  up.sh
harness/docker/consumer/: Cargo.toml  build.rs
harness/docker/consumer/src/: main.rs
harness/docker/topologies/: README.md  lib.sh  run-all.sh
harness/docker/topologies/articulation/: compose.yml  run.sh
harness/docker/topologies/capstone/: compose.yml  run.sh
harness/docker/topologies/diamond/: compose.yml  run.sh
harness/docker/topologies/elastic/: compose.yml  run.sh
harness/docker/topologies/line2/: compose.yml  run.sh
harness/docker/topologies/line3/: compose.yml  run.sh
harness/docker/topologies/metropolis/: compose.yml  run.sh
harness/docker/topologies/relay-grow/: compose.yml  run.sh
harness/docker/topologies/require_redundancy/: run.sh
harness/docker/topologies/task-forms/: compose.yml  run.sh
harness/docker/topologies/warm/: compose.yml
rayonet/: Cargo.toml
rayonet-build/: Cargo.toml
rayonet-build/src/: lib.rs
rayonet/src/: agent.rs  capability.rs  control.rs  coordinator.rs  fleet.rs  framing.rs  graph.rs  layout.rs  lib.rs  node.rs  observability.rs  process.rs  protocol.rs  provisioning.rs  relay.rs  ssh.rs  telemetry.rs  testing.rs  tui.rs
rayonet/tests/: control_socket.rs  ssh.rs  subprocess.rs  tui_snapshot.rs
rayonet/tests/fixtures/: capstone-tui.golden  capstone.jsonl  cold-provisioning.jsonl  metropolis.jsonl
rayonette/: Cargo.toml
rayonette-build/: Cargo.toml
rayonette-build/src/: lib.rs
rayonette-macros/: Cargo.toml
rayonette-macros-core/: Cargo.toml
rayonette-macros-core/src/: lib.rs
rayonette-macros/src/: lib.rs
rayonette/src/: agent.rs  capability.rs  control.rs  coordinator.rs  fleet.rs  framing.rs  graph.rs  heartbeat.rs  layout.rs  lib.rs  node.rs  observability.rs  process.rs  protocol.rs  provisioning.rs  relay.rs  ssh.rs  telemetry.rs  testing.rs  tui.rs
rayonette/tests/: control_socket.rs  macro_inprocess.rs  ssh.rs  subprocess.rs  tui_snapshot.rs  ui.rs
rayonette/tests/fixtures/: capstone-tui.golden  capstone.jsonl  metropolis.jsonl
rayonette/tests/ui/fail/: capturing_closure_still_rejected.rs  capturing_closure_still_rejected.stderr  tier_d_give_up_emits_compile_error.rs  tier_d_give_up_emits_compile_error.stderr  wrong_annotation_is_rejected.rs  wrong_annotation_is_rejected.stderr
rayonette/tests/ui/pass/: annotated_closure_compiles.rs  named_fn_compiles.rs  tier_b_typed_binding_compiles.rs  tier_c_range_compiles.rs  tier_c_vec_literal_compiles.rs  turbofish_compiles.rs
