[workspace]
resolver = "2"
members = [
    "rayonet",
    "rayonet-build",
    "fixtures/consumer",
    "harness/docker/consumer",
    "examples/montecarlo",
    "examples/ssh-run",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
authors = ["Luca Cappelletti"]
license = "MIT"
repository = "https://github.com/LucaCappelletti94/rayonet"
readme = "README.md"
keywords = ["distributed", "ssh", "parallel", "rayon", "tasks"]
categories = ["concurrency"]

# Extremely aggressive lints, workspace-wide. Group lints are denied at a lower
# priority so individual carve-outs (priority 0) win. Carve-outs are kept to the
# few that are impractical wholesale, everything else must be fixed, not allowed.
[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
missing_debug_implementations = "warn"
unreachable_pub = "warn"
unused_qualifications = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "deny", priority = -2 }
pedantic = { level = "deny", priority = -2 }
nursery = { level = "deny", priority = -2 }
cargo = { level = "deny", priority = -2 }
# Impractical wholesale: the transitive dep graph routinely carries duplicates.
multiple_crate_versions = "allow"
# Would force Send/Sync bounds across the whole async API for a nursery lint;
# revisit once we commit to a spawnable (Send) transport.
future_not_send = "allow"
# A few high-value restriction lints on top of the groups.
dbg_macro = "deny"
todo = "warn"
unimplemented = "warn"
