[package]
name = "rayonet"
description = "SSH-transport task distribution: fan task-parallel work across machines."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
# Opt-in rayon `ParallelIterator` composition (`.netmap(f).run(&fleet)`).
rayon = ["dep:rayon"]
# Opt-in terminal TUI renderer for the live run view.
tui = ["dep:ratatui"]

[dependencies]
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["use-std"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
futures = "0.3"
blake3 = "1"
openssh = "0.11"
# Coordinator-side topology graph: CSR structs plus Kahn, BiconnectedComponents,
# and ConnectedComponents over the discovered DAG. `alloc` is the feature these
# algorithms need; pinned by revision (not published to crates.io).
geometric-traits = { git = "https://github.com/earth-metabolome-initiative/geometric-traits", rev = "0178cb4712c3868f8bc5dd17b4749ab2a8bdf2b4", default-features = false, features = [
    "alloc",
] }
rayon = { version = "1", optional = true }
ratatui = { version = "0.29", optional = true }

[dev-dependencies]
proptest = "1"

[lints]
workspace = true
