[package]
name = "rayonette-build"
description = "Build-time source bundling for rayonette (used in a consumer's build.rs)."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
tar = "0.4"
toml = "0.8"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
