[package]
name = "rayonette-macros"
description = "Proc-macro shell for rayonette's #[tasks] attribute; delegates to rayonette-macros-core."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
rayonette-macros-core = { path = "../rayonette-macros-core" }
proc-macro2 = "1"
syn = "2"

[lints]
workspace = true
