[package]
name = "rayonette"
description = "SSH-transport task distribution: fan task-parallel work across machines."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
# Opt-in rayon `ParallelIterator` composition (`.netmap(f).run(&fleet)`).
rayon = ["dep:rayon"]
# Opt-in terminal TUI renderer for the live run view.
tui = ["dep:ratatui"]

[dependencies]
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["use-std"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
futures = "0.3"
blake3 = "1"
openssh = "0.11"
# Link-time task registration: every `register_task!` submits a `TaskEntry` that
# `Registry::from_inventory` gathers at agent boot, replacing the build-time
# source scan. `inventory` (ctor-based) is preferred over `linkme` here because
# its constructors run regardless of where a task is defined, so a task factored
# into a consumer's sub-crate is never silently dropped.
inventory = "0.3"
# The `#[rayonette::tasks]` attribute: a thin proc-macro shell over the
# instrumented `rayonette-macros-core`, re-exported as `rayonette::tasks`.
rayonette-macros = { path = "../rayonette-macros" }
# Coordinator-side topology graph: CSR structs plus Kahn, BiconnectedComponents,
# and ConnectedComponents over the discovered DAG, and the ForceAtlas2 layout the
# graph panel positions nodes with. `alloc` is the feature these algorithms need;
# pinned by revision (not published to crates.io).
geometric-traits = { git = "https://github.com/earth-metabolome-initiative/geometric-traits", rev = "d6a2df5a15d843cc0c39c4ca4ff0a2481ff9ab9b", default-features = false, features = [
    "alloc",
] }
rayon = { version = "1", optional = true }
ratatui = { version = "0.29", optional = true }

[dev-dependencies]
proptest = "1"
# Compile-pass and compile-fail UI tests for `#[rayonette::tasks]` (tests/ui/),
# proving annotated closures and named fns compile and that wrong-type or
# unannotated tasks fail at the call site with a legible message.
trybuild = "1"
# The TUI snapshot test (tests/tui_snapshot.rs) renders the committed capstone
# trace and diffs it against a golden; it needs ratatui's TestBackend and serde
# JSON to read the trace. Both are test-only.
ratatui = "0.29"
serde_json = "1"
# `test-util` adds `tokio::time::pause`/`advance` so the heartbeat's timeouts can
# be tested deterministically (`#[tokio::test(start_paused = true)]`) without
# real-time sleeps.
tokio = { version = "1", features = ["full", "test-util"] }

[lints]
workspace = true
