[package]
name = "tui-replay"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "tui-replay"
path = "src/main.rs"

[dependencies]
rayonet = { path = "../../rayonet", features = ["tui"] }
ratatui = "0.29"
serde_json = "1"
tokio = { version = "1", features = ["rt", "net", "time"] }

[lints]
workspace = true
