[package]
name = "rayonette-docker-consumer"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "rayonette-docker-consumer"
path = "src/main.rs"

[dependencies]
rayonette = { path = "../../../rayonette" }
tokio = { version = "1", features = ["full"] }
serde_json = "1"

[build-dependencies]
rayonette-build = { path = "../../../rayonette-build" }

[lints]
workspace = true
